--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.2",
     "axios": "^0.20.0",
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
-    "expo-status-bar": "^1.0.2",
+    "expo-status-bar": "^1.0.0",
     "metro-react-native-babel-preset": "^0.53.1",
     "native-base": "^2.13.14",
     "react": "~16.11.0",
